--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "skypropertiesapp",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3000",  
+
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@popperjs/core": "^2.11.8",
@@ -17,7 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+
+   "start": "PORT=4000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
